--- a/static/css/style.less
+++ b/static/css/style.less
@@ -189,6 +189,12 @@ header {
   &-item {
     padding-left: 95px;
     margin-bottom: 20px;
+    width: 39%;
+    float: right;
+    &:first-child {
+      float: left;
+      margin-bottom: 100px;
+    }
     &__title {
       font-size: 22px;
       color: #db4242;
