--- a/templates/form.html
+++ b/templates/form.html
@@ -5,7 +5,7 @@
       <a href="#pop" class="button popupbutton">Задайте вопрос</a>
     {% elif second %}
       <a href="#pop" class="button popupbutton">
-        Узнайте стоимость<br /><span class="underline">получив актуальную информацию на Ваш e-mail</span>
+        Узнать актуальные цены <br> на туры в Африку
       </a>
     {% elif third %}
       <a href="#pop" class="button popupbutton">Да! Я хочу на сафари!</a>
