--- a/static/css/style.less
+++ b/static/css/style.less
@@ -172,7 +172,7 @@ header {
 #block_2 {
   background-color: #1a86cc;
   background: url("../img/count.jpg") repeat;
-  h1 {
+  p {
     text-align: center;
     text-transform: uppercase;
     text-shadow: 2px 8px 6px rgba(0,0,0,0.2), 0px -5px 15px rgba(255,255,255,0.3);
@@ -225,7 +225,7 @@ header {
 
 #block_4 {
   background: url("../img/count.jpg") repeat;
-  h2{
+  p, h1, h2, h3 {
     text-align: center;
     font-size: 23px;
     color: #fff;
