--- a/static/css/style.less
+++ b/static/css/style.less
@@ -225,6 +225,12 @@ header {
 
 #block_4 {
   background: url("../img/count.jpg") repeat;
+  .container {
+    padding-top: 30px;
+  }
+  .ticker {
+    padding-top: 30px;
+  }
   p, h1, h2, h3 {
     text-align: center;
     font-size: 23px;
