--- a/static/css/style.less
+++ b/static/css/style.less
@@ -228,7 +228,7 @@ header {
   .container {
     padding-top: 30px;
   }
-  .ticker {
+  .ticket {
     padding-top: 30px;
   }
   p, h1, h2, h3 {
@@ -236,7 +236,7 @@ header {
     font-size: 23px;
     color: #fff;
     text-transform: uppercase;
-    line-height: 90px;
+    line-height: 2em;
   }
 }
 
