--- a/static/css/style.less
+++ b/static/css/style.less
@@ -786,6 +786,18 @@ label.error {
   z-index: 9999 !important;
 }
 
+.top {
+  &-text {
+    margin-bottom: 40px;
+  }
+}
+
+.add {
+  &-bottom {
+    margin-bottom: 40px;
+  }
+}
+
 @import "__includes/about.less";
 @import "__includes/travel.less";
 @import "__includes/article.less";
